--- a/cf-template.yml
+++ b/cf-template.yml
@@ -17,7 +17,7 @@ Parameters:
   SourceAMI:
     Description: Source AMI
     Type: String
-    Default: ami-2afbde4a
+    Default: ami-70173610
   FilesystemParameters:
     Description: "space-separated filesystem designations: [PATH]:[SIZE]:[MOUNT_OPTIONS]"
     Type: String
@@ -65,6 +65,8 @@ Resources:
             cfn-init --region ${AWS::Region} -s ${AWS::StackName} -r AMIInstance
             install-splitami
             splitami
+            aws configure set default.region us-west-2
+            aws cloudformation delete-stack --stack-name ${AWS::StackName}
       ImageId:
         Fn::FindInMap:
         - RegionAMIMap
@@ -75,7 +77,7 @@ Resources:
       SecurityGroupIds:
       - !GetAtt SplitAMISecurityGroup.GroupId
       SubnetId: !Ref PublicSubnet
-      IamInstanceProfile: !Ref AMIInstanceProfile
+      IamInstanceProfile: !Ref IAMInstanceProfile
       Tags:
       - Key: Application
         Value: !Ref AWS::StackName
@@ -89,7 +91,7 @@ Resources:
         Value: app
       - Key: 'mdsol:splitami:sandbox:app'
         Value: ""
-  AMIRole:
+  IAMRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -133,18 +135,25 @@ Resources:
             - ec2:CreateTags
             - ec2:ModifyImageAttribute
             Resource: "*"
+      - PolicyName: Delete-my-CF-stack
+        PolicyDocument:
+          Statement:
+          - Effect: Allow
+            Action:
+            - cloudformation:DeleteStack
+            Resource: "*"
       - PolicyName: IAMAccess-denied
         PolicyDocument:
           Statement:
           - Effect: Allow
             NotAction: iam:*
             Resource: "*"
-  AMIInstanceProfile:
+  IAMInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Path: "/"
       Roles:
-      - Ref: AMIRole
+      - Ref: IAMRole
   VPC:
     Type: AWS::EC2::VPC
     Properties:
