--- a/cf-template.yml
+++ b/cf-template.yml
@@ -8,9 +8,12 @@ Parameters:
   AppFilesystemParameters:
     Description: "space-separated filesystem designations of the form [PATH]:[SIZE]:[MOUNT_OPTIONS]"
     # Default disk partitions for Center for Internet Security recommendations
-    Default: "/tmp:5:nodev,nosuid"
-    # Default: "/data:30:defaults /tmp:20:nodev,nosuid /var/tmp:7:nodev,nosuid,noexec /var:10:defaults /home:10:defaults,nodev /var/log/audit:5:defaults /var/log:15:defaults"
+    Default: "/data:30:defaults /tmp:20:nodev,nosuid /var/tmp:7:nodev,nosuid,noexec /var:10:defaults /home:10:defaults,nodev /var/log/audit:5:defaults /var/log:15:defaults"
     Type: String
+  LogGroupName:
+    Description: An existing Cloudwatch LogGroup for the build log. Leave empty for a new group.
+    Type: String
+    Default: splitami
   SoftwareRepoURL:
     Description: The git checkout URL for the repo that contains splitAMI.rb
     Type: String
@@ -23,53 +26,95 @@ Parameters:
     Description: Worker EC2 instance type (m3.medium, etc).
     Type: String
     ConstraintDescription: must be a valid EC2 instance type.
-    Default: m3.medium
+    Default: t2.micro
   InstanceBootKey:
     Description: EC2 Boot Key, installed for user 'ec2-user'
     Type: AWS::EC2::KeyPair::KeyName
     Default: medistrano
+  Shutdown:
+    Description: Whether or not to delete this CloudFormation Stack on completion
+    Type: String
+    Default: true
+    AllowedValues:
+      - true
+      - false
 Resources:
   AMIInstance:
     Type: "AWS::EC2::Instance"
-    DependsOn: IAMInstanceProfile
+    DependsOn: LogStream
     Metadata:
       AWS::CloudFormation::Init:
-        config:
+        AppInstall:
           package_upgrade: true
+          packages:
+            yum:
+              git: []
+              gcc: []
+              ruby-devel: []
           files:
-            "/usr/local/sbin/splitami-install":
-              mode: '0755'
+            "/scripts/app-install":
               content:
                 !Sub |
-                  #!/usr/bin/env bash
-                  set -ex
-                  yum -y install git gcc ruby-devel emacs
+                  echo Installing splitAMI...
                   gem install io-console bundler
-                  rm -rf /splitami
-                  git clone ${SoftwareRepoURL} /splitami
-                  cd /splitami
-                  git checkout ${SoftwareVersion}
+                  git clone ${SoftwareRepoURL} /app
+                  cd /app && git checkout ${SoftwareVersion}
                   bundle install --jobs=4
-            "/usr/local/sbin/splitami-run":
-              mode: '0755'
+        AppRun:
+          files:
+            "/scripts/app-run":
               content:
                 !Sub |
-                  #!/usr/bin/env bash
-                  set -ex
-                  cd /splitami
-                  exec ./splitAMI.rb ${AppSourceAMI} ${AppFilesystemParameters}
+                  echo Running splitAMI...
+                  ./splitAMI.rb ${AppSourceAMI} ${AppFilesystemParameters}
+        SetupLogging:
+          files:
+            "/scripts/setup-logging":
+              content: !Sub |
+                curl -O \
+                https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py
+                chmod +x ./awslogs-agent-setup.py
+                ./awslogs-agent-setup.py -n -r ${AWS::Region} -c /etc/awslogs.conf
+            "/etc/awslogs.conf":
+              content:
+                Fn::Join:
+                  - ''
+                  - - !Sub |
+                      [general]
+                      state_file = /var/awslogs/state/agent-state
+
+                      [/applog.txt]
+                      file = /applog.txt
+                    - |-
+                      log_group_name =
+                    - !If [NeedsNewLogGroup, !Ref LogGroup, !Ref LogGroupName]
+                    - !Sub |
+
+                      log_stream_name = ${LogStream}
+                      datetime_format = %b %d %H:%M:%S
+        configSets:
+          All:
+          - SetupLogging
+          - AppInstall
+          - AppRun
     Properties:
       UserData:
         Fn::Base64:
           !Sub |
-            #!/bin/bash -e
+            #!/bin/bash
+            set -ex pipefail
             export PATH="/usr/local/sbin:/usr/local/bin:$PATH:/opt/aws/bin"
-            echo "Running cfn-init..."
-            cfn-init --region ${AWS::Region} -s ${AWS::StackName} -r AMIInstance
-            splitami-install && splitami-run
-            echo "Shutting down stack ${AWS::StackName}..."
             aws configure set default.region ${AWS::Region}
-            aws cloudformation delete-stack --stack-name ${AWS::StackName}
+            cfn-init --region ${AWS::Region} -s ${AWS::StackName} \
+              -r AMIInstance --configsets All
+            source /scripts/setup-logging
+            bash -ex /scripts/app-install        | tee -a /applog.txt
+            cd /app && bash -ex /scripts/app-run | tee -a /applog.txt
+            if ${Shutdown} ; then
+              echo "Deleting Stack ${AWS::StackName}..." | tee -a /applog.txt
+              sleep 60 # wait for CloudwatchLogs Agent to finish sending data
+              aws cloudformation delete-stack --stack-name ${AWS::StackName}
+            fi
       ImageId:
         Fn::FindInMap:
         - RegionAMIMap
@@ -78,7 +123,7 @@ Resources:
       InstanceType: !Ref InstanceType
       KeyName: !Ref InstanceBootKey
       SecurityGroupIds:
-      - !GetAtt SplitAMISecurityGroup.GroupId
+      - !GetAtt EC2SecurityGroup.GroupId
       SubnetId: !Ref PublicSubnet
       IamInstanceProfile: !Ref IAMInstanceProfile
       Tags:
@@ -204,8 +249,8 @@ Resources:
     Type: AWS::EC2::VPC
     DependsOn: IAMInstanceProfile
     Properties:
-      EnableDnsSupport: 'true'
-      EnableDnsHostnames: 'true'
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
       CidrBlock:
         Fn::FindInMap:
         - SubnetConfig
@@ -221,7 +266,7 @@ Resources:
     DependsOn: IAMInstanceProfile
     Properties:
       VpcId: !Ref VPC
-      MapPublicIpOnLaunch: 'true'
+      MapPublicIpOnLaunch: true
       CidrBlock:
         Fn::FindInMap:
         - SubnetConfig
@@ -295,7 +340,7 @@ Resources:
       RuleNumber: '100'
       Protocol: '6'
       RuleAction: allow
-      Egress: 'false'
+      Egress: false
       CidrBlock: 0.0.0.0/0
       PortRange:
         From: '0'
@@ -309,7 +354,7 @@ Resources:
       RuleNumber: '100'
       Protocol: '6'
       RuleAction: allow
-      Egress: 'true'
+      Egress: true
       CidrBlock: 0.0.0.0/0
       PortRange:
         From: '0'
@@ -322,7 +367,7 @@ Resources:
         Ref: PublicSubnet
       NetworkAclId:
         Ref: PublicNetworkAcl
-  SplitAMISecurityGroup:
+  EC2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
     DependsOn: IAMInstanceProfile
     Properties:
@@ -334,17 +379,51 @@ Resources:
         FromPort: '22'
         ToPort: '22'
         CidrIp: 0.0.0.0/0
+  LogGroup:
+    DependsOn: IAMInstanceProfile
+    Condition: NeedsNewLogGroup
+    Type: "AWS::Logs::LogGroup"
+    DeletionPolicy: Retain
+    Properties:
+      LogGroupName: !Ref LogGroupName
+  LogStream:
+    DependsOn: IAMInstanceProfile
+    Type: "AWS::Logs::LogStream"
+    DeletionPolicy: Retain
+    Properties:
+      LogGroupName: !If [NeedsNewLogGroup, !Ref LogGroup, !Ref LogGroupName]
+Outputs:
+  LogURL:
+    Description: The AWS Console URL for the log output
+    Value:
+      Fn::Join:
+        - ''
+        - - https://console.aws.amazon.com/cloudwatch/home?region=
+          - !Sub ${AWS::Region}#logEventViewer:group=
+          - !If [NeedsNewLogGroup, !Ref LogGroup, !Ref LogGroupName]
+          - !Sub ;stream=${LogStream}
+  DebugCommand:
+    Description: Run this command if something goes wrong
+    Value: !Sub |-
+      ssh -i ~/.ssh/${InstanceBootKey} ec2-user@${AMIInstance.PublicDnsName}
+       cat /var/log/cloud-init-output.log
+Conditions:
+  NeedsNewLogGroup: !Equals [!Ref LogGroupName, ""]
 Mappings:
   # AMI Name = amzn-ami-hvm-2017.03.0.20170417-x86_64-gp2
   RegionAMIMap:
-    ap-northeast-1:
-      AMI: ami-xxxxxxxx
-    sa-east-1:
-      AMI: ami-xxxxxxxx
-    ap-southeast-2:
-      AMI: ami-xxxxxxxx
-    ap-southeast-1:
-      AMI: ami-xxxxxxxx
+    ap-northeast-1: # Tokyo, Japan
+      AMI: ami-923d12f5
+    ap-northeast-2: # Seoul, South Korea
+      AMI: ami-9d15c7f3
+    ap-south-1: # Mumbai, India
+      AMI: ami-52c7b43d
+    sa-east-1: # Sao Paolo, Brazil
+      AMI: ami-37cfad5b
+    ap-southeast-2: # Sydney, Australia
+      AMI: ami-162c2575
+    ap-southeast-1: # Singapore
+      AMI: ami-fc5ae39f
     eu-central-1: # Frankfurt, Germany
       AMI: ami-b968bad6
     eu-west-1: # Dublin, Ireland
@@ -353,18 +432,14 @@ Mappings:
       AMI: ami-b6daced2
     us-east-1: # Virginia, USA
       AMI: ami-c58c1dd3
+    us-east-2: # Ohio, USA
+      AMI: ami-4191b524
     us-west-1: # California, USA
       AMI: ami-7a85a01a
     us-west-2: # Oregon, USA
-      AMI: ami-xxxxxxxx
+      AMI: ami-4836a428
   SubnetConfig:
     VPC:
       CIDR: 10.0.0.0/16
     Public:
       CIDR: 10.0.0.0/24
-Outputs:
-  DebugCommand:
-    Description: Run this command to follow the build log.
-    Value: !Sub |-
-      ssh -i ~/.ssh/${InstanceBootKey} ec2-user@${AMIInstance.PublicDnsName}
-        tail -f /var/log/cloud-init-output.log
