--- a/cf-template.yml
+++ b/cf-template.yml
@@ -4,7 +4,7 @@ Parameters:
   AppSourceAMI:
     Description: Source AMI
     Type: String
-    Default: ami-70173610
+    Default: ami-7a85a01a
   AppFilesystemParameters:
     Description: "space-separated filesystem designations of the form [PATH]:[SIZE]:[MOUNT_OPTIONS]"
     # Default disk partitions for Center for Internet Security recommendations
@@ -103,11 +103,11 @@ Resources:
             aws configure set default.region ${AWS::Region}
             cfn-init --region ${AWS::Region} -s ${AWS::StackName} \
               -r AMIInstance --configsets All
-            source /scripts/setup-logging
-            bash -ex /scripts/app-install        | tee -a /applog.txt
-            cd /app && bash -ex /scripts/app-run | tee -a /applog.txt
+            source /scripts/setup-logging        | tee -a /applog.txt 2>&1
+            bash -ex /scripts/app-install        | tee -a /applog.txt 2>&1
+            cd /app && bash -ex /scripts/app-run | tee -a /applog.txt 2>&1
             if ${Shutdown} ; then
-              echo "Deleting Stack ${AWS::StackName}..." | tee -a /applog.txt
+              echo "Deleting Stack ${AWS::StackName}..." | tee -a /applog.txt 2>&1
               sleep 30 # wait for CloudwatchLogs Agent to finish sending data
               aws cloudformation delete-stack --stack-name ${AWS::StackName}
             fi
